service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-server
spec:
  selector:
    app: sample-server
  ports:
    - protocol: TCP
      port: 5678
      targetPort: http-server
