gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-gateway
spec:
  gatewayClassName: sample-class
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: yourdomain.com
